--- a/pom.xml
+++ b/pom.xml
@@ -32,40 +32,15 @@
 		</dependency>
 		<dependency>
 			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-elytron-security-jdbc</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>io.quarkus</groupId>
 			<artifactId>quarkus-smallrye-metrics</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-resteasy-jsonb</artifactId>
-		</dependency>
-		<dependency> 
-			 <groupId>io.quarkus</groupId>
-			 <artifactId>quarkus-scheduler</artifactId> 
-		</dependency>
-		<dependency>
-			<groupId>org.json</groupId>
-			<artifactId>json</artifactId>
-			<version>20220320</version>
-		</dependency>
-		<dependency>
-			<groupId>org.xerial</groupId>
-			<artifactId>sqlite-jdbc</artifactId>
-			<version>3.36.0.3</version>
-		</dependency>
-		<dependency>
-			<groupId>com.fazecast</groupId>
-			<artifactId>jSerialComm</artifactId>
-			<!-- <version>2.9.1</version> -->
-			<version>2.9.2</version>
-		</dependency>
-		<dependency>
-			<groupId>io.quarkus</groupId>
-			<artifactId>quarkus-agroal</artifactId>
-		</dependency>
+		
+<!-- 		<dependency>
+			<groupId>de.wipf</groupId>
+			<artifactId>jasmarty</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency> -->
+		
 	</dependencies>
 	<build>
 		<plugins>
